Added example6 with interim analysis. Changed the lme analysis to only include IIV on the age slope.

--- a/Scenarios/1. Introduction.Rmd
+++ b/Scenarios/1. Introduction.Rmd
@@ -73,7 +73,7 @@ StudyObj<-AdaptiveStudy(StudyObjIni)
 
 The `plotStudyCohorts` function provides a  high level picture of the study.
 ```{r}
-plotStudyCohorts(StudyObj)
+plotStudyCohorts(StudyObj,plotAnaTimes = T)
 ```
 
 ### The number of subjects remaining
